# daythem

./: .easignore  .env.example  .gitignore  CLAUDE.md  DayThem.html  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  sw.js
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/docs/architecture/domains/: teacher.md
backend/migrations/: README  env.py
backend/migrations/versions/: 11049cb9f0cf_initial_schema.py  a2b3c4d5e6f7_notify.py  b3c4d5e6f7a8_class_color.py
backend/src/daythem/: config.py
backend/src/daythem/adapters/: database.py  orm.py  repository.py
backend/src/daythem/entrypoints/: app.py  deps.py  ratelimit.py  security.py
backend/src/daythem/entrypoints/routers/: announcements.py  auth.py  classes.py  notify.py  promo.py  tax.py  tuition.py
backend/src/daythem/service/: handlers.py  notify.py  unit_of_work.py
backend/tests/: conftest.py
backend/tests/e2e/: test_announcements.py  test_auth.py  test_auth_data_flow.py  test_class_color_archive.py  test_delete_account.py  test_notify.py  test_promo.py  test_reports.py  test_security.py  test_students.py  test_tax.py
docs/: DOMAIN.md  UX_FLOWS.md
mobile/: App.tsx  CLAUDE.md  app.json  babel.config.js  eas.json  jest.setup.js  package-lock.json  package.json  playwright.config.ts
mobile/web/: index.html
template/: B _ L_p h_c l_m ch_ _o.html  B_o c_o _ analytics.html  C_i _t l_p _ t_ng t_c (1).html  D _ Assistant _ xu_t_.html  H_c ph_ _ finance.html  H_c sinh _ directory.html  L_ch tu_n _ agenda.html  Profile _ t_ng t_c.html  (+1 more)
(+118 files in other folders)
